--- a/UCSC_Course_Planner/templates/majorprogress.html
+++ b/UCSC_Course_Planner/templates/majorprogress.html
@@ -145,10 +145,13 @@
 {##}
 {#            </div>#}
             {% endfor %}
-            <br><br>
-            <input type="submit" value="Submit">
+
+            <button type="submit" class="btn btn-primary ">
+                <i class="icon-user icon-white"></i> Add Classes to Profile
+            </button>
             </form>
 
+            <hr>
             <br>
 
 
