--- a/UCSC_Course_Planner/templates/about.html
+++ b/UCSC_Course_Planner/templates/about.html
@@ -60,12 +60,13 @@
                         </ul>
                     </li>
                 </ul>
+                
                 <form class="navbar-form pull-right">
 {#                    <input class="span2" type="text" placeholder="Email">#}
 {#                    <input class="span2" type="password" placeholder="Password">#}
                     <button class="btn" type="button" onclick="self.location='{{   logURL|safe}}'"> {% if is_logged_in %}
                         Logout of {{name}}     {% else %} Login  <img src="/static/img/cruzid_blue60.png" style="zoom: 100%;" > {% endif %}</button>
-
+                        
                 </form>
             </div><!--/.nav-collapse -->
         </div>
@@ -84,23 +85,23 @@
     <!-- Example row of columns -->
     <div class="row">
         <div class="span4">
-            <h2>Heading</h2>
+            <h2>Joe Rowley</h2>
 
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn" href="#">View details »</a></p>
         </div>
         <div class="span4">
-            <h2>Heading</h2>
+            <h2>Sam Wing</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn" href="#">View details »</a></p>
         </div>
         <div class="span4">
-            <h2>Heading</h2>
+            <h2>Thomas Beeman</h2>
             <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
             <p><a class="btn" href="#">View details »</a></p>
         </div>
+        
     </div>
-
     <hr>
 
     <footer>
