--- a/UCSC_Course_Planner/templates/contact.html
+++ b/UCSC_Course_Planner/templates/contact.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0054)http://twitter.github.com/bootstrap/examples/hero.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Contact</title>
+    <title>UCSC Course Planner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -77,15 +77,14 @@
     <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="hero-unit">
         <h1>Contact Us</h1>
-        <p>Get in touch</p>
-        <p><a href="http://www.twitter.com/ucscplanner" class="btn btn-primary btn-large">@ucscplanner</a></p>
-        <p><a href="mailto:jrowley@ucsc.edu" class="btn btn-primary btn-large">Email</a></p>
+        <p>Get in touch!</p>
+        <p><a href="http://twitter.com/ucscplanner" class="btn btn-primary btn-large">Follow Us on The Twitters! @ucscplanner</a></p>
     </div>
 
     <!-- Example row of columns -->
     <div class="row">
         <div class="span4">
-            <h2>Heading</h2>
+            <h2>Header</h2>
 
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn" href="#">View details »</a></p>
