Login automatically redirects to dashboard Home link on navbar of home.html will now link to dashboard if the user is logged in otherwise it links back to itself. hack to restrict unlogged in users from viewing the dashboard

--- a/UCSC_Course_Planner/templates/contact.html
+++ b/UCSC_Course_Planner/templates/contact.html
@@ -44,7 +44,7 @@
             <a class="brand" href="/">UCSC Planner</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li><a href="/">Home</a></li>
+                    <li><a href="/dashboard">Home</a></li>
                     <li><a href="/About">About</a></li>
                     <li class="active"><a href="/Contact">Contact</a></li>
                     <li class="dropdown">
