--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -184,7 +184,7 @@
             <a class="brand" href="/">UCSC Planner</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li class="active"><a href="/">Home</a></li>
+                    <li class="active"><a href="/dashboard">Home</a></li>
                     <li><a href="/About">About</a></li>
                     <li><a href="/Contact">Contact</a></li>
                 </ul>
