working on dashboard

--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -168,7 +168,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="#">Project name</a>
+            <a class="brand" href="#">UCSC Course Planner</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li class="active"><a href="#">Home</a></li>
@@ -333,7 +333,7 @@
                             </tbody>
                             <tfoot>
                             <tr>
-                                <th><i class="icon-plus-sign"></i>&nbsp;<a href="#myModal" data-toggle="modal" onclick="$('modal-text').text('Fall');">Add Course</a></th>
+                                <th><i class="icon-plus-sign"></i>&nbsp;<a href="#myModal" data-toggle="modal" onclick="alert($('modal-text').text());">Add Course</a></th>
                                 <th><i class="icon-plus-sign"></i>&nbsp;<a href="#myModal" data-toggle="modal">Add Course</a></th>
                                 <th><i class="icon-plus-sign"></i>&nbsp;<a href="#myModal"  data-toggle="modal">Add Course</a></th>
                                 <th><i class="icon-plus-sign"></i>&nbsp;<a href="#myModal" data-toggle="modal">Add Course</a></th>
