--- a/UCSC_Course_Planner/templates/selectmajor.html
+++ b/UCSC_Course_Planner/templates/selectmajor.html
@@ -317,7 +317,7 @@
                     <div class="span6" >
                         <form>
 
-                            <select id="minorList1" onchange="favBrowser()" disabled>
+                            <select id="minorList1" onchange="favBrowser()" >
                                 <option></option>
                                 <option>Bio Engineering</option>
                                 <option>Computer Science</option>
@@ -328,7 +328,7 @@
                             <button id="removeMinorButton1" class="btn" style="display: none"><i class="icon-minus-sign icon-blacks"></i> Remove Minor </button>
                             <a id="cloneMinorButton1" id="popme" class="btn" data-toggle="popover" data-placement="right" data-content=
                                     "Did you know that for every additional minor you are required to take an additional 25 units of upper divs? Also, this is menu is disabled right now because we are still implementing this function."
-                               title="" data-original-title="FYI..." disabled><i class="icon-plus-sign icon-blacks"></i> Add Minor</a>
+                               title="" data-original-title="FYI..." ><i class="icon-plus-sign icon-blacks"></i> Add Minor</a>
 
                         </form>
 
