Fixed model so I can add classes and stuff. niiice. Doesn't save to db (yet?)

--- a/UCSC_Course_Planner/templates/prereqs.html
+++ b/UCSC_Course_Planner/templates/prereqs.html
@@ -169,5 +169,8 @@
     </div>
     <input type="submit" value="Save Prerequisite">
 </form>
+{% for course in courses %}
+    '{{ course.number }}',
+{% endfor %}
 </body>
 </html>
