--- a/UCSC_Course_Planner/templates/login.html
+++ b/UCSC_Course_Planner/templates/login.html
@@ -89,7 +89,7 @@
 
     <form class="form-signin">
         <h2 class="form-signin-heading">{% if is_logged_in %}Thanks for logging in!{% else %}Please log in.{% endif %}</h2>
-        <p> {{ name }}</p>
+{#        <p> {{ name }}</p>#}
         <p>{{  greeting|safe }}</p>
 
         {% if is_logged_in %} <button class="btn btn-medium btn-primary" type="button" onclick="self.location='{{  logoutURL|safe }}'"> Logout </button> {% endif %}
