Working on dates

--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -397,7 +397,11 @@
             <div>
 {#            <div style="background-color: beige">#}
                 <h2>News + Info</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus a cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p>Last Day to drop a class:
+                <br>
+                   Spring Enrollement Opens:
+                <br>
+                </p>
                 <hr>
                 {% if major2 %}
                     <h3> Majors :</h3>
