--- a/UCSC_Course_Planner/templates/about.html
+++ b/UCSC_Course_Planner/templates/about.html
@@ -44,21 +44,13 @@
             <a class="brand" href="/">UCSC Planner</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
+                    {% if is_logged_in %}
                     <li><a href="/dashboard">Home</a></li>
+                    {% else %}
+                    <li><a href="/">Home</a></li>
+                    {% endif %}
                     <li class="active"><a href="/About">About</a></li>
                     <li><a href="/Contact">Contact</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li class="nav-header">Nav header</li>
-                            <li><a href="#">Separated link</a></li>
-                            <li><a href="#">One more separated link</a></li>
-                        </ul>
-                    </li>
                 </ul>
                 
                 <form class="navbar-form pull-right">
@@ -77,31 +69,64 @@
 
     <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="row">
-    <div class="hero-unit span7 offset2">
+    <div class="hero-unit">
         <h1>About Us</h1>
-        <p>Students concerned about students</p>
+        <p>Just trying to ease the college experience :)</p>
     </div>
     </div>
     <!-- Example row of columns -->
-    <div class="row">
-        <div class="span4">
-            <h2>Joe Rowley</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        </div>
-        <div class="span4">
-            <h2>Sam Wing</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        </div>
-        <div class="span4">
-            <h2>Thomas Beeman</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        </div>
-        
-    </div>
+    <ul class="thumbnails">
+        <li class = "span3">
+            <div class="thumbnail">
+                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px;height: 200px;" src="/static/img/django2.jpg">
+                <div class="caption">
+                    <h3>Django Dog</h3>
+                    <p>The largest contributer to the site.</p>
+                    <p>
+                        <a href="#"class="btn btn-primary">Email</a>
+                        <a href="http://github.com"class="btn btn-primary">Github</a>
+                    </p>
+            </div>
+        </li>
+                <li class = "span3">
+            <div class="thumbnail">
+                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px;height: 200px;" src="/static/img/django2.jpg">
+                <div class="caption">
+                    <h3>Django Dog</h3>
+                    <p>The largest contributer to the site.</p>
+                    <p>
+                        <a href="#"class="btn btn-primary">Email</a>
+                        <a href="http://github.com"class="btn btn-primary">Github</a>
+                    </p>
+            </div>
+        </li>        <li class = "span3">
+            <div class="thumbnail">
+                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px;height: 200px;" src="/static/img/django2.jpg">
+                <div class="caption">
+                    <h3>Django Dog</h3>
+                    <p>The largest contributer to the site.</p>
+                    <p>
+                        <a href="#"class="btn btn-primary">Email</a>
+                        <a href="http://github.com"class="btn btn-primary">Github</a>
+                    </p>
+            </div>
+        </li>        <li class = "span3">
+            <div class="thumbnail">
+                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px;height: 200px;" src="/static/img/django2.jpg">
+                <div class="caption">
+                    <h3>Django Dog</h3>
+                    <p>The largest contributer to the site.</p>
+                    <p>
+                        <a href="#"class="btn btn-primary">Email</a>
+                        <a href="http://github.com"class="btn btn-primary">Github</a>
+                    </p>
+            </div>
+        </li>
+     </ul>
     <hr>
 
-    <footer>
-        <p>© Company 2013</p>
+    <footer align="center">
+        <p>© HCI 2013</p>
     </footer>
 
 </div> <!-- /container -->
