--- a/UCSC_Course_Planner/templates/contact.html
+++ b/UCSC_Course_Planner/templates/contact.html
@@ -44,21 +44,13 @@
             <a class="brand" href="/">UCSC Planner</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
+                    {% if is_logged_in %}
                     <li><a href="/dashboard">Home</a></li>
+                    {% else %}
+                    <li><a href="/">Home</a></li>
+                    {% endif %}
                     <li><a href="/About">About</a></li>
                     <li class="active"><a href="/Contact">Contact</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li class="nav-header">Nav header</li>
-                            <li><a href="#">Separated link</a></li>
-                            <li><a href="#">One more separated link</a></li>
-                        </ul>
-                    </li>
                 </ul>
                 <form class="navbar-form pull-right">
 {#                    <input class="span2" type="text" placeholder="Email">#}
@@ -76,7 +68,7 @@
 
     <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="row">
-    <div class="hero-unit span7 offset2">
+    <div class="hero-unit">
         <h1>Contact Us</h1>
         <p>Get in touch!</p>
         <p><a href="http://twitter.com/ucscplanner" class="btn btn-primary btn-large">Follow Us on The Twitters! @ucscplanner</a></p>
@@ -87,8 +79,8 @@
     <br>
     <hr>
 
-    <footer>
-        <p>© Company 2013</p>
+    <footer align="center">
+        <p>© HCI 2013</p>
     </footer>
 
 </div> <!-- /container -->
