Just some filler text

--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -397,9 +397,9 @@
             <div>
 {#            <div style="background-color: beige">#}
                 <h2>News + Info</h2>
-                <p>Last Day to drop a class:
+                <p>Last Day to drop a class: April 5th
                 <br>
-                   Spring Enrollement Opens:
+                   Spring Enrollement Opens: March 1st
                 <br>
                 </p>
                 <hr>
@@ -465,7 +465,7 @@
                 {%  endif %}
                 <hr>
                 <h3>Additional Notes:</h3>
-                <p>"But I must explain to you ..."Launch demo modal</a></p>
+                <p>Other relevant infromation to students...</p>
             </div>
         </div>
         <!-- Main hero unit for a primary marketing message or call to action -->
@@ -485,6 +485,7 @@
                         <button type="button" id="ViewInstructor" class="btn  btn-small"><span class="ui-button-text">View Instructor</span> </button>
                         <button type="button" id="ViewTime" class="btn  btn-small"><span class="ui-button-text">View Time</span> </button>
                         <button type="button" id="ViewUnits" class="btn  btn-small"><span class="ui-button-text">View Units</span> </button>
+                        <button type="button" id="ViewMinus" class="btn  btn-small"><span class="ui-button-text">View Minus</span> </button>
                         <button type="button" id="toggleView" class="btn  btn-small"><span class="ui-button-text">Toggle View</span> </button>
                     </div>
 
